# XIDX

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  Xdmf.dtd  Xidx.dtd
CMake/: setup.py
cmake/: setup.py
examples/: hpc.xmf  simple.xmf  test_2d_vect_tseries.xmf  test_3d_multibox.xmf  test_3d_tseries.xmf  test_3d_tseries_xpaths.xmf
examples/cpp/: CMakeLists.txt  read.cpp  validate.cpp  write.cpp
examples/python/: read.py  write.py
examples/t0/: meta.xmf
examples/t0/l0/: meta.xmf
examples/t0/l1/: meta.xmf
examples/t000000000/l0000/: meta.xmf
examples/t000000001/: meta.xmf
examples/t1/: meta.xmf
examples/t1/l0/: meta.xmf
examples/t1/l1/: meta.xmf
examples/xidx/: hpc.xidx  simple.xidx  simple_hyperslab.xidx
examples/xidx/t000000000/: meta.xidx
examples/xidx/t000000000/l0000/: meta.xidx
examples/xidx/t000000000/l0001/: meta.xidx
examples/xidx/t000000001/: meta.xidx
examples/xidx/t000000001/l0000/: meta.xidx
examples/xidx/t000000001/l0001/: meta.xidx
examples/xidx/t000000002/: meta.xidx
examples/xidx/t000000002/l0000/: meta.xidx
examples/xmf/: hpc.xmf  test_2d_vect_tseries.xmf  vect_tseries.xmf
examples/xmf/t000000000/: meta.xmf
examples/xmf/t000000000/l0001/: meta.xmf
include/: CMakeLists.txt
include/xidx/: setup.py  xidx.h  xidx.i  xidx_config.h  xidx_data_source.h  xidx_file.h  xidx_index_space.h
include/xidx/elements/: xidx_attribute.h  xidx_dataitem.h  xidx_domain.h  xidx_double_hyperslab_domain.h  xidx_double_list_domain.h  xidx_geometry.h  xidx_group.h  xidx_hyperslab_domain.h  xidx_list.h  xidx_list_domain.h  xidx_multiaxis_domain.h  xidx_parsable.h  xidx_parse_utils.cpp  xidx_parse_utils.h  xidx_phylog_hyperslab_domain.h  xidx_phylog_list_domain.h  xidx_spatial_domain.h  xidx_topology.h  xidx_types.h  xidx_variable.h
src/: CMakeLists.txt  idx_metadata.cpp  idx_metadata.h  idx_metadata_config.h  idx_metadata_datatypes.h  idx_metadata_hpc_layout.cpp  idx_metadata_hpc_layout.h  idx_metadata_layout.cpp  idx_metadata_layout.h  idx_metadata_parse_utils .cpp  idx_metadata_parse_utils.cpp  idx_metadata_parse_utils.h  idx_metadata_simple_layout.cpp  idx_metadata_simple_layout.h  xidx.cpp  xidx.h  xidx_config.h  xidx_file.cpp
src/datatype/: idx_metadata_attribute.h  idx_metadata_datagrid.h  idx_metadata_dataitem.h  idx_metadata_datatypes.h  idx_metadata_enums.h  idx_metadata_geometry.h  idx_metadata_grid.h  idx_metadata_information.h  idx_metadata_level.h  idx_metadata_parsable.h  idx_metadata_parse_utils.cpp  idx_metadata_parse_utils.h  idx_metadata_time.h  idx_metadata_timestep.h  idx_metadata_topology.h  xidx_attribute.h  xidx_datagrid.h  xidx_dataitem.h  xidx_enums.h  xidx_geometry.h  xidx_grid.h  xidx_information.h  xidx_level.h  xidx_parsable.h  xidx_parse_utils.cpp  xidx_parse_utils.h  xidx_time.h  xidx_timestep.h  xidx_topology.h
src/layout/: idx_metadata_hpc_layout.cpp  idx_metadata_hpc_layout.h  idx_metadata_layout.cpp  idx_metadata_layout.h  idx_metadata_simple_layout.cpp  idx_metadata_simple_layout.h  xidx_hpc_layout.cpp  xidx_hpc_layout.h  xidx_layout.cpp  xidx_layout.h  xidx_simple_layout.cpp  xidx_simple_layout.h
test/: CMakeLists.txt  read.cpp  validate.cpp  write.cpp
tests/: CMakeLists.txt  write.cpp
